# litemon

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE.md  TESTING.md  deny.toml  k6.js  litemon.service  public-key.gpg
.github/workflows/: ci.yml  dist.yml  pre_ci.yml
dashboards/: LiteMon Full-1750870870495.json  LiteMon Full-1750882392219.json  LiteMon Overview-1750864739139.json  LiteMon Overview-1750882400025.json  README.md
examples/: config.kdl
extras/: strip.sh
src/: args.rs  collector.rs  config.rs  http.rs  http_utils.rs  lib.rs  main.rs
src/metrics/: collector.rs  cpu.rs  disk.rs  fs.rs  info.rs  memory.rs  mod.rs  net.rs  pressure.rs  systemd_unit_state.rs
testing/: config.alloy
tests/integration/: cliargs.rs  config.rs  main.rs
